--- a/404.html
+++ b/404.html
@@ -87,10 +87,10 @@
         <div class="animate_top bb xe rj">
           <img src="images/404.svg" alt="404" class="bb fb" />
 
-          <h2 class="ek tj eo kk wm gb">Sorry, the page can’t be found</h2>
-          <p class="hb">The page you were looking for appears to have been moved, deleted or does not exist.</p>
+          <h2 class="ek tj eo kk wm gb">Oups, la page que vous cherchez n'existe pas.</h2>
+          <p class="hb">La page que vous recherher a pu être suprimer.</p>
 
-          <a href="./index.html" class="ek vc rg gh lk ml il _l gi hi">Back to Home</a>
+          <a href="./index.html" class="ek vc rg gh lk ml il _l gi hi">Retour à l'accueil</a>
         </div>
       </section>
       <!-- ===== 404 End ===== -->
