--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="bb ze ki xn 2xl:ud-px-0">
           <div class="tc _o">
             <div class="animate_left jn/2">
-              <h1 class="fk vj zp or kk wm wb">Bienvenue au FabLab de moanda</h1>
+              <h1 class="fk vj zp or kk wm wb">Bienvenue au FabLab de Moanda</h1>
               <p class="fq">
                 Nous sommes ravis de vous accueillir et de vous offrir l'opportunité de poursuivre une formation professionnelle de manière flexible.
 
@@ -147,8 +147,8 @@
                 <img src="images/icon-01.svg" alt="Icon" />
               </div>
               <div>
-                <h4 class="ek yj go kk wm xb">Qualifications</h4>
-                <p></p>
+                <h4 class="ek yj go kk wm xb">Sélections</h4>
+                <p>Lorem ipsum dolor sit amet conse adipiscing elit.</p>
               </div>
             </div>
 
@@ -159,7 +159,7 @@
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">6 mois de formations</h4>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet conse adipiscing elit.</p>
               </div>
             </div>
 
@@ -170,7 +170,7 @@
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">3 mois d'incubation</h4>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet conse adipiscing elit.</p>
               </div>
             </div>
           </div>
@@ -257,7 +257,7 @@
                   
                   <div class="tc wf ag">
                     <img src="images/icon-calender.svg" alt="Calender" />
-                    <p>Durée: <b>10 mois</b></p>
+                    <p>Durée: <b>9 mois</b></p>
                   </div>
                 </div>
                 <h4 class="ek tj ml il kk wm xl eq lb">
@@ -282,7 +282,7 @@
                 <div class="tc uf wf ag jq">
                   <div class="tc wf ag">
                     <img src="images/icon-calender.svg" alt="Calender" />
-                    <p>Durée: <b>10 mois</b></p>
+                    <p>Durée: <b>9 mois</b></p>
                   </div>
                 </div>
                 <h4 class="ek tj ml il kk wm xl eq lb">
@@ -308,7 +308,7 @@
                 <div class="tc uf wf ag jq">
                   <div class="tc wf ag">
                     <img src="images/icon-calender.svg" alt="Calender" />
-                    <p>Durée: <b>10 mois</b></p>
+                    <p>Durée: <b>9 mois</b></p>
                   </div>
                 </div>
                 <h4 class="ek tj ml il kk wm xl eq lb">
@@ -360,7 +360,7 @@
             <!-- Service Item -->
             <div class="animate_top sg oi pi zq ml il am cn _m">
               <img src="images/icon-04.svg" alt="Icon" />
-              <h4 class="ek zj kk wm nb _b">Qualifications</h4>
+              <h4 class="ek zj kk wm nb _b">Sélections</h4>
               <p>Pendant environ 1 mois, les profils des participants seront en observation. </p>
             </div>
 
