--- a/index.html
+++ b/index.html
@@ -138,6 +138,27 @@
       <!-- ===== Hero End ===== -->
 
       <!-- ===== Small Features Start ===== -->
+      <section class="lj tp kr">
+        <!-- Section Title Start -->
+        <div
+          x-data="{ sectionTitle: `A qui s'adresse ce programme ?`, sectionTitleText: ``}"
+        >
+          <div class="animate_top bb ze rj ki xn vq">
+    <h2
+            x-text="sectionTitle"
+            class="fk vj pr kk wm on/5 gq/2 bb _b"
+    >
+    </h2>
+    <p class="bb on/5 wo/5 hq" x-text="sectionTitleText"></p>
+</div>
+
+
+        </div>
+        <!-- Section Title End -->
+
+        
+      </section>
+      
       <section id="features">
         <div class="bb ze ki yn 2xl:ud-px-12.5">
           <div class="tc uf zo xf ap zf bp mq">
@@ -147,8 +168,8 @@
                 <img src="images/icon-01.svg" alt="Icon" />
               </div>
               <div>
-                <h4 class="ek yj go kk wm xb">Sélections</h4>
-                <p>Lorem ipsum dolor sit amet conse adipiscing elit.</p>
+                <h4 class="ek yj go kk wm xb">Homme / Femme</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
               </div>
             </div>
 
@@ -158,8 +179,8 @@
                 <img src="images/icon-02.svg" alt="Icon" />
               </div>
               <div>
-                <h4 class="ek yj go kk wm xb">6 mois de formations</h4>
-                <p>Lorem ipsum dolor sit amet conse adipiscing elit.</p>
+                <h4 class="ek yj go kk wm xb">Age</h4>
+                <p>Cette formation s'adresse aux hommes et femmes dont l'âge varie entre <b>15</b> et <b>40</b> ans</p>
               </div>
             </div>
 
@@ -169,8 +190,8 @@
                 <img src="images/icon-03.svg" alt="Icon" />
               </div>
               <div>
-                <h4 class="ek yj go kk wm xb">3 mois d'incubation</h4>
-                <p>Lorem ipsum dolor sit amet conse adipiscing elit.</p>
+                <h4 class="ek yj go kk wm xb">Conditions</h4>
+                <p>Il vous suffit juste d'être motivé(e) et disposé(e)</p>
               </div>
             </div>
           </div>
