--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </div>
               <div>
                 <h4 class="ek yj go kk wm xb">Homme / Femme</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Vous êtes eligible quelque soit votre genre.</p>
               </div>
             </div>
 
